<resources>
    <string name="app_name">FootballMatchScheduler</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>
	<string name="next">Next</string>
	<string name="last">Last</string>
	<string name="search">Search</string>
	<string name="date">date</string>
	<string name="time">time</string>
	<string name="vs">vs</string>
	<string name="home">Home</string>
	<string name="away">Away</string>
	<string name="goals">Goals</string>
	<string name="shots">Shots</string>
	<string name="goal_keeper">Goal Keeper</string>
	<string name="defense">Defense</string>
	<string name="midfield">Midfield</string>
	<string name="forward">Forward</string>
	<string name="substitute">Substitute</string>
    <string name="year">Year</string>
	<string name="stadium">Stadium</string>
    <string name="overview">Overview</string>
	<string name="player">Player</string>
    <string name="weight_kg">Weight (Kg)</string>
	<string name="height_m">Height (m)</string>
    <string name="position">Position</string>
    <string name="added_to_favorite">Added to Favorite</string>
	<string name="removed_from_favorite">Removed from Favorite</string>
	<string-array name="league">
		<item>English Premier League</item>
		<item>German Bundesliga</item>
		<item>Italian Serie A</item>
		<item>French Ligue 1</item>
		<item>Spanish La Liga</item>
	</string-array>
	<string-array name="league_id">
		<item>4328</item>
		<item>4331</item>
		<item>4332</item>
		<item>4334</item>
		<item>4335</item>
	</string-array>
</resources>
