<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="10dp">

	<android.support.v7.widget.AppCompatSpinner
		android:id="@+id/prev_spinner"
		android:padding="10dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true" />

	<android.support.v4.widget.SwipeRefreshLayout
		android:id="@+id/prev_swipe_refresh"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/prev_spinner">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/prev_rv"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

	</android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>